--- a/src/App.css
+++ b/src/App.css
@@ -11,6 +11,7 @@
 
 html {
   scroll-behavior: smooth;
+  scroll-snap-type: y proximity;
 }
 
 /* Add scroll margin for anchor links to account for fixed navbar */
