--- a/src/layouts/MainLayout/MainLayout.css
+++ b/src/layouts/MainLayout/MainLayout.css
@@ -8,11 +8,12 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  padding: 120px 40px;
+  padding: 120px 40px 60px;
   position: relative;
   overflow: hidden;
   width: 100%;
   max-width: 100vw;
+  min-height: calc(100vh - 80px);
 }
 
 .custom-text-background::before {
