--- a/src/components/ContactsMain/ContactsMain.css
+++ b/src/components/ContactsMain/ContactsMain.css
@@ -28,6 +28,10 @@
 
 .additional-contacts-container {
   width: 100%;
+  min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   min-height: 60vh;
   position: relative;
   background: 
